<resources>
    <string name="app_name">Telemedicine</string>
    <string name="title_home">Home</string>
    <string name="title_appointments">Appointments</string>
    <string name="title_reports">Reports</string>
    <string name="title_chats">Chats</string>
    <string name="home_welcome">Welcome</string>
    <string name="list_item">Item</string>
    <string name="show_more">Show More Items...</string>
    <string name="header_home">Home</string>
    <string name="header_reports">Reports</string>
    <string name="header_chats">Chats</string>
    <string name="type">Type message here</string>
    <string name="appt_upcoming">Upcoming</string>
    <string name="appt_prev">Previous</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="button_signup">Sign up</string>
    <string name="email_placehold">Enter your email</string>
    <string name="username_placehold">Enter your username</string>
    <string name="password_placehold">Enter your password</string>
    <string name="show">Show</string>
    <string name="lastFour_placehold">Enter your last four digits of SSN</string>
    <string name="button_login">Login</string>
    <string name="welcome_tv">Welcome to Hoganson Medical</string>
    <string name="signin_tv">Please sign in</string>
    <string name="signup_tv">Please sign up</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="emailHint">Email</string>
    <string name="emailConfirmHint">Confirm Email</string>
    <string name="socialNumHint">Social Security Number</string>
    <string name="socialNumConfirmHint">Confirm SSN</string>
    <string name="passwordHint">Password</string>
    <string name="passwordConfirmHint">Confirm Password</string>
    <string name="signup_btn">Sign Up</string>
    <string name="alreadyHave_tv">Already have an account? <u>Login</u> </string>
    <string name="Login">Login</string>
    <string name="empIDHint">Employee ID</string>
    <string name="empIDConfirmHint">Confirm Employee ID</string>
    <string name="header_appt">Appointments</string>
    <string name="header_appt_sched">Schedule Appointment</string>
    <string name="label_appt_date">Appointment Date:</string>
    <string name="label_appt_type">Appointment Type:</string>
    <string name="label_appt_time">Appointment Time:</string>
    <string name="label_doctor">Preferred Doctor:</string>
    <string name="button_appt_date">Select Date</string>
    <string name="button_submit_appt">Schedule Appointment</string>
    <string name="button_new_appt">Schedule A New Appointment</string>
    <string name="hospitalAddress">677 Church St,\nMarietta, GA 30060</string>
    <string name="agora_app_id">adb40434c3de48e191a8635f053a9e97</string>
    <string name="agora_sample_token">006adb40434c3de48e191a8635f053a9e97IABid8LKPgH8XK2URkMCLC5NwSgq8papAC7pLlSt6xGtEaDfQtYAAAAAEADwD23zU+3CXQEAAQBR7cJd</string>
    <string name="appt_loc_header">Location: </string>
    <string name="home_next_appt">Your next appointment is: </string>
    <string name="home_upcom_appt">00/00/0000 @ 00:00 AM</string>
    <string name="home_new_mesgs_1">You have </string>
    <string name="home_num_mesgs">2</string>
    <string name="home_new_mesgs_2"> new chat messages.</string>
    <string name="home_new_reports_1">You have </string>
    <string name="home_num_reports">1</string>
    <string name="home_new_reports_2"> new reports to view.</string>
    <string name="title_activity_report_viewer">ReportViewer</string>
    <string name="signout">Sign Out</string>
    <string name="title_activity_settings">Settings</string>
    <string name="video_call">Video Call</string>
    <string name="account">Account</string>
    <string name="privacy">Privacy and Security</string>
    <string name="terms">Terms and Conditions</string>
    <string name="theme">Light Theme</string>
    <string name="about">About</string>
    <string name="help">Help</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="flaticon">Designed by https://www.flaticon.com/authors/smashicons from www.flaticon.com</string>
</resources>
