<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.telemedicine.ui.home.HomeFragment"
        android:label="@string/header_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_appointments"
        android:name="com.example.telemedicine.ui.sample_pages.sample_appt"
        android:label="@string/header_appt"
        tools:layout="@layout/sample_appt" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.example.telemedicine.ui.sample_pages.sample_report"
        android:label="@string/header_reports"
        tools:layout="@layout/sample_report" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.example.telemedicine.ui.reports.ReportsFragment"
        android:label="@string/header_chats"
        tools:layout="@layout/fragment_chats" />
</navigation>