<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/home_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_welcome"
        android:textAlignment="center"
        android:textSize="45sp"
        android:textColor="@color/colorPrimary"
        android:lines="2"
        android:maxLines="2"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/text_nextAppt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_nextAppt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_next_appt"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/appt_nextAppt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_welcome" />

    <TextView
        android:id="@+id/appt_nextAppt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_upcom_appt"
        android:textAlignment="center"
        android:textColor="@color/colorImportant"
        android:paddingBottom="30dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/text_new_mesg_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_nextAppt" />

    <TextView
        android:id="@+id/text_new_mesg_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_new_mesgs_1"
        android:paddingTop="30dp"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/text_new_mesg_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appt_nextAppt"/>

    <TextView
        android:id="@+id/text_new_mesg_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_num_mesgs"
        android:textAlignment="center"
        android:textColor="@color/colorImportant"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/text_new_mesg_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_new_mesg_1"/>

    <TextView
        android:id="@+id/text_new_mesg_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_new_mesgs_2"
        android:paddingBottom="30dp"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/text_new_reports_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_new_mesg_2"/>

    <TextView
        android:id="@+id/text_new_reports_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_new_reports_1"
        android:paddingTop="30dp"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/text_new_reports_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_new_mesg_3" />

    <TextView
        android:id="@+id/text_new_reports_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_num_reports"
        android:textAlignment="center"
        android:textColor="@color/colorImportant"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/text_new_mesg_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_new_reports_1" />

    <TextView
        android:id="@+id/text_new_reports_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_new_reports_2"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_new_reports_2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>