<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.Login">

    <TextView
        android:id="@+id/TitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:layout_marginBottom="100dp"
        android:text="@string/welcome_tv"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signinTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/signin_tv"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/usernameET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/textinputborder"
        android:hint="@string/username_placehold"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/passwordET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_marginBottom="346dp"
        android:background="@drawable/textinputborder"
        android:hint="@string/password_placehold"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTV" />

    <EditText
        android:id="@+id/lastFourOfSSN"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textinputborder"
        android:hint="@string/lastFour_placehold"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordET" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorText"
        android:onClick="onClick"
        android:text="@string/button_login"
        android:textColor="@color/colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastFourOfSSN" />

    <TextView
        android:id="@+id/forgotPassTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:text="@string/forgot_pass"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>